<resources>
    <string name="app_name">ESZN</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="weightBef">Weight Before</string>
    <string name="weightAft">Weight After</string>
    <string name="date">Date</string>
    <string name="new_diary_item">New Diary Item</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="button_records">Records</string>
    <string name="button_profile">Profile</string>
    <string name="button_stats">Statistics</string>
    <string name="button_about">About</string>
    <string name="plotName">Number of Occurances</string>
    <string name="version_1_0">version 1.0</string>
    <string name="created_by_k_v_ri_d_niel">Created By Kővári Dániel</string>
    <string name="email">kovarid99@gmail.com</string>
    <string name="description_text">A gasztroenterológiai cselekvést követő alkalmazás. \n
        A "Records" gombra kattintva a felhasználó
        felvehet újabb rekordokat, hogy nyomon tudja követni a cselekvéseit. Itt további részletes adatokat tud megadni ha szeretne.\n
        A "Statistics" gombra kattintva a felhasználó láthatja az elmúlt 1 hétben lévő napi széklet ürítési szokásait. </string> />
</resources>